--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: auto;
     @include gradient((lightblue,lightblue,lightcoral,lightcoral,rgb(255, 187, 0),rgb(255, 187, 0)), 120deg)
 }
 
@@ -239,8 +238,10 @@ main {
     #budget-container {
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
+        height: 100%;
+        max-height: 700px;
         width: 650px;
+        overflow: auto;
     
         #top-container {
             display: flex;
