--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
   display: none;
 }
 
+.search_hide {
+  display: none;
+}
+
 .selected {
   background-color: rgba(47, 227, 255, 0.25);
   border: 1px solid rgba(47, 227, 255, 0.4);
